# stack_trace_parser

./: CMakeLists.txt  CONTRIBUTE.md  COPYRIGHT.md  INSTALL.md  README.md
include/: CPlusPlusTraceParser.h  Config.h  JavaTraceParser.h  Logger.h  Plugin.h  PythonTraceParser.h  StackTrace.h  TraceParser.h
src/: C++TraceParser.cpp  Config.cpp  JavaTraceParser.cpp  Logger.cpp  PluginLoader.cpp  PythonTraceParser.cpp  StackTrace.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
